# BlockChainsExercises

./: .gitignore  CMakeLists.txt  README.md  collisions_checker.py
blockchain/: blockchain_engine.c  blockchain_engine.h
blockchain/GUI/: eblockchain_header.txt
blockchain/blockchainFiles/: users
blockchain/structures/: structures.c  structures.h
blockchain/transactions/: transactions.c  transactions.h
hash/: hash.c  hash.h  random.c  random.h  sha.c
hash/random/: random.c
main/: main.c  speedtest.c  testingdata.csv
test_files/: 10001.txt  10001_skirtumas1.txt  10001_skirtumas2.txt  10002.txt  collisions_checker.py
tests/: test.c
